# replication_code_Sheridan_nanoscale_XUV_source_graphene

./: HHG_spectrum_broken_parallel_fig4.py  HHG_spectrum_broken_parallel_perpendicular_figS7.py  HHG_spectrum_intact_parallel_figS5.py  README.txt  time_frequency_parallel_broken_figS6.py
octopus/: .codecov.yml  .gitignore  CONTRIBUTING  LICENSE  Makefile.am  PACKAGING  README  configure.ac
octopus/doc/doxygen/: create_documentation.sh
octopus/external_libs/bpdn/: bpdn.f90
octopus/external_libs/qshep/: qshep2d.f90  qshep3d.f90
octopus/local_build/: build_octopus_cobra.sh  build_octopus_cobra_cgal.sh  build_octopus_mpcdf.sh  libtool
octopus/local_build/doc/: oct-atomic_occupations.1  oct-casida_spectrum.1  oct-display_partitions.1  oct-run_periodic_table.1  oct-run_testsuite.sh.1  variables.texi
octopus/local_build/share/: varinfo_orig
octopus/local_build/src/: oct-casida_spectrum  oct-center-geom  oct-conductivity  oct-convert  oct-dielectric-function  oct-floquet  oct-harmonic-spectrum  oct-help  oct-infrared_spectrum  oct-local_multipoles  oct-oscillator-strength  oct-photoelectron_spectrum  oct-propagation_spectrum  oct-spin_susceptibility  oct-tdtdm  oct-unfold  oct-vibrational_spectrum  oct-wannier90  oct-xyz-anim  octopus
octopus/m4/: elpa.m4  fftw.m4  libxc.m4  metis.m4  mpi.m4  octopus_compilation_info.m4  stdcpp.m4
octopus/scripts/: Makefile.am  mk_functionals_list.pl  mk_kfunctionals_list.pl
octopus/scripts/test/: test_octopus_cori.sh  test_octopus_edison.sh  test_octopus_lonestar.sh  test_octopus_stampede.sh
octopus/share/: Makefile.am
octopus/share/opencl/: Makefile.am  axpy.cl  boundaries.cl  cl_rtype.h  copy.cl  cuda_compat.h  mesh_batch_single.cl  projector.cl  set_zero.cl  uvw_to_xyz.cl
octopus/src/: Makefile.am  common-rules.make
octopus/src/basic/: accel.F90  accel_inc.F90  alloc_cache.F90  blacs_proc_grid.F90  calc_mode_par.F90  cgal_polyhedra.F90  clock.F90  comm.F90  comm_inc.F90  command_line.F90  cublas.cc  cuda.F90  cuda_low.cc  debug.F90  distributed.F90  global.F90  heap.F90  iihash.F90  iihash_low.cc  io.F90  io_binary.c  io_binary_f.F90  io_binary_f_inc.F90  io_csv.c  io_csv_f.F90  kind.F90  lattice_vectors.F90  linked_list.F90  list_node.F90  loct.F90  lookup.F90  merge_sorted.F90  messages.F90  mpi.F90  mpi_debug.F90  mpi_inc.F90  mpi_lib.F90  mpi_lib_inc.F90  mpi_test.F90  multicomm.F90  (+20 more)
octopus/src/basis_set/: atomic_orbital.F90  atomic_orbital_inc.F90  loewdin.F90  loewdin_inc.F90  orbitalbasis.F90  orbitalbasis_inc.F90  orbitalset.F90  orbitalset_inc.F90  orbitalset_utils.F90  orbitalset_utils_inc.F90
octopus/src/boxes/: box.F90  box_cgal.F90  box_cylinder.F90  box_factory.F90  box_image.F90  box_intersection.F90  box_minimum.F90  box_parallelepiped.F90  box_shape.F90  box_sphere.F90  box_union.F90  box_user_defined.F90  multibox.F90
octopus/src/classical/: charged_particle.F90  classical_particle.F90  classical_particles.F90  propagator_data_classical_particles.F90
octopus/src/dftbplus/: dftb.F90
octopus/src/electrons/: current.F90  dos.F90  eigen_cg.F90  eigen_cg_inc.F90  eigen_evolution_inc.F90  eigen_plan_inc.F90  eigen_rmmdiis.F90  eigen_rmmdiis_inc.F90  eigensolver.F90  eigensolver_inc.F90  electrons.F90  elf.F90  energy_calc.F90  energy_calc_inc.F90  exponential.F90  forces.F90  forces_inc.F90  kpoints.F90  linear_solver.F90  linear_solver_inc.F90  magnetic.F90  matter.F90  partial_charges.F90  pert.F90  perturbation.F90  perturbation_electric.F90  perturbation_electric_inc.F90  perturbation_inc.F90  perturbation_ionic.F90  perturbation_ionic_inc.F90  perturbation_kdotp.F90  perturbation_kdotp_inc.F90  perturbation_magnetic.F90  perturbation_magnetic_inc.F90  perturbation_none.F90  perturbation_none_inc.F90  preconditioners.F90  preconditioners_inc.F90  stress.F90  subspace.F90  (+12 more)
octopus/src/fdep/: fortran_dependencies.mk
octopus/src/grid/: affine_coordinates.F90  affine_coordinates_inc.F90  allocate_hardware_aware.cc  allocate_hardware_aware_f.F90  basins.F90  basis_set_abst.F90  batch.F90  batch_inc.F90  batch_ops.F90  batch_ops_inc.F90  boundaries.F90  boundaries_inc.F90  cartesian.F90  coordinate_system.F90  cube.F90  cube_function.F90  cube_function_inc.F90  curv_briggs.F90  curv_gygi.F90  curv_modine.F90  derivatives.F90  derivatives_inc.F90  fourier_shell.F90  fourier_space.F90  fourier_space_inc.F90  grid.F90  grid_inc.F90  hypercube.F90  index.F90  io_function.F90  io_function_inc.F90  mesh.F90  mesh_batch.F90  mesh_batch_inc.F90  mesh_cube_map.F90  mesh_cube_parallel_map.F90  mesh_function.F90  mesh_function_inc.F90  mesh_init.F90  mesh_interpolation.F90  (+31 more)
octopus/src/hamiltonian/: absorbing_boundaries.F90  berry.F90  dft_u_noncollinear_inc.F90  energy.F90  epot.F90  exchange_operator.F90  exchange_operator_inc.F90  ext_partner_list.F90  functionals_list.F90  gauge_field.F90  hamiltonian_abst.F90  hamiltonian_elec.F90  hamiltonian_elec_base.F90  hamiltonian_elec_base_inc.F90  hamiltonian_elec_inc.F90  hgh_projector.F90  hgh_projector_inc.F90  hirshfeld.F90  ion_interaction.F90  kb_projector.F90  kb_projector_inc.F90  kick.F90  lasers.F90  lda_u.F90  lda_u_inc.F90  lda_u_io.F90  libvdwxc.F90  magnetic_constrain.F90  oct_exchange.F90  pcm.F90  pcm_eom.F90  pcm_potential.F90  projector.F90  projector_inc.F90  projector_matrix.F90  rkb_projector.F90  scf_tol.F90  scissor.F90  scissor_inc.F90  singularity.F90  (+7 more)
octopus/src/include/: complex.F90  fortran_types.h  global.h  integer.F90  integer8.F90  real.F90  undef.F90
octopus/src/interactions/: coulomb_force.F90  current_to_mxll_field.F90  external_potential.F90  gravity.F90  interactions_factory.F90  ion_electron_local_potential.F90  linear_medium_to_em_field.F90  lorentz_force.F90  mxll_field_to_medium.F90  nlcc.F90  xc_interaction.F90
octopus/src/ions/: atom.F90  born_charges.F90  ion_dynamics.F90  ions.F90  read_coords.F90  spglib_f08.f90  symmetries.F90  vibrations.F90
octopus/src/main/: main.F90  (+12 more)
octopus/testsuite/: Makefile.am  oct-run_testsuite.sh.in
(+1874 files in other folders)
